--- a/Labo3/Opdracht 2,11/Personal homepage.html
+++ b/Labo3/Opdracht 2,11/Personal homepage.html
@@ -6,6 +6,27 @@
 </head>
 <body>
 <section>
+    <h1>Prognose</h1>
+    <p>Hier is de voorspelling van de resultaten van drie vakken voor mij en enkele medestudenten.</p>
+    <table border="1px solid black">
+        <tr>
+            <td></td><td>Communication in English</td><td>Excel</td><td>Fundamentals of Programming</td>
+        </tr>
+        <tr>
+            <td>Ben Edwards</td><td>17/20</td><td>15/20</td><td>14/20</td>
+        </tr>
+        <tr>
+            <td>Sanjeyan Naguleswaran</td><td>20/20</td><td>20/20</td><td>20/20</td>
+        </tr>
+        <tr>
+            <td>Ian-Thomas Everaerts</td><td>16/20</td><td>14/20</td><td>18/20</td>
+        </tr>
+        <tr>
+            <td>Adrian Jaron</td><td>12/20</td><td>20/20</td><td>14/20</td>
+        </tr>
+    </table>
+</section>
+<section>
     <h1>Personal information</h1>
     <p>Hier kun je wat informatie over mij zien.</p>
     <ul>
