--- a/labo3/index.html
+++ b/labo3/index.html
@@ -11,10 +11,11 @@
 <section>
     <h2>Eerste Semester</h2>
     <ul>
-        <li><a href="./personalHomepage">Homepage</a></li>
-        <li><a href="./Contactinformation">Contactinformation</a></li>
-        <li><a href="./Opleidingsaanbod">Opleidingsaanbod</a></li>
-        <li><a href="/index.html">Back</a></li>
+        <li><a href="Homepage/Personal%20homepage.html">Homepage</a></li>
+        <li><a href="Contactinformation/contact%20information.html">Contactinformation</a></li>
+        <li><a href="Opleidingsaanbod/Opleidingsaanbod.html">Opleidingsaanbod</a></li>
+        <li><a href="Prognose/Personal%20homepage.html">Prognose homepage</a></li>
+        <li><a href="./index.html">Back</a></li>
 
     </ul>
 </section>
