--- a/labo3/index.html
+++ b/labo3/index.html
@@ -15,8 +15,7 @@
         <li><a href="Contactinformation/contact%20information.html">Contactinformation</a></li>
         <li><a href="Opleidingsaanbod/Opleidingsaanbod.html">Opleidingsaanbod</a></li>
         <li><a href="Prognose/Personal%20homepage.html">Prognose homepage</a></li>
-        <li><a href="./index.html">Back</a></li>
-
+        <li><a href="/index.html">Back</a></li>
     </ul>
 </section>
 </body>
