--- a/labo3/Homepage/Personal homepage.html
+++ b/labo3/Homepage/Personal homepage.html
@@ -30,10 +30,16 @@
     <h1>Likes</h1>
     <p>Dit zijn enkele interesses van mij.</p>
     <ul>
-        <li>Favorite band: Linkin Park</li>
-        <img src="images/Linkin_Park_logo.png" alt="favoriete band">
-        <li>Favorite movie: all quiet on the western front</li>
-        <img src="images/all%20quiet%20on%20the%20western%20front.jpg" alt="favorite movie">
+        <li>
+            Favorite band: Linkin Park
+            <br>
+            <img src="images/Linkin_Park_logo.png" alt="favoriete band">
+        </li>
+        <li>
+            Favorite movie: All Quiet on the Western Front
+            <br>
+            <img src="images/all%20quiet%20on%20the%20western%20front.jpg" alt="favorite movie">
+        </li>
     </ul>
 </section>
 </body>
