--- a/labo3/Opleidingsaanbod/Opleidingsaanbod.html
+++ b/labo3/Opleidingsaanbod/Opleidingsaanbod.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Ben Edwards</title>
+  <meta charset="UTF-8">
+  <title>Ben Edwards</title>
 </head>
 <body>
 <h1>Hogeschool VIVES</h1>
@@ -18,23 +18,23 @@
 <p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele
   bachelor diploma’s behalen:</p>
 <ul>
-  <li>
-  Toegepaste informatica
+  <li>Toegepaste informatica
     <ol>
-      <li>Applicatie-ontwikkeling</li>
-      <ul>
-        <li>Apps & gamification</li>
-        <li>Networks & cybersecurity</li>
-        <li>AI</li>
-      </ul>
-      <li>Softwaremanagement</li>
-      <ul>
-        <li>Apps & gamification</li>
-      </ul>
+      <li>Applicatie-ontwikkeling
+        <ul>
+          <li>Apps & gamification</li>
+          <li>Networks & cybersecurity</li>
+          <li>AI</li>
+        </ul>
+      </li>
+      <li>Softwaremanagement
+        <ul>
+          <li>Apps & gamification</li>
+        </ul>
+      </li>
     </ol>
   </li>
-  <li>
-    Bedrijfsmanagement
+  <li>Bedrijfsmanagement
     <ol>
       <li>Accountancy-Fiscaliteit</li>
       <li>Automotive management</li>
@@ -44,8 +44,7 @@
       <li>Marketing - specialisatie Retail- & storemanagement</li>
     </ol>
   </li>
-  <li>
-    Office management
+  <li>Office management
     <ol>
       <li>Management assistant</li>
       <li>HR officer</li>
@@ -53,8 +52,8 @@
     </ol>
   </li>
 </ul>
-<p>Definitie van Ohm: <br />
-&emsp;De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd
+<p>Definitie van Ohm:<br>
+  &emsp;De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd
   met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met een weerstand van 1 Ohm
   zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p>
 <p>&copy; 2024</p>
