--- a/labo5/Demo/index.html
+++ b/labo5/Demo/index.html
@@ -3,8 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <!-- <style>
+    h1, h2 {
+      color:yellow;
+      font-size: 2em;
+    }
+    p{
+      color: red;
+    }
+
+  </style>!-->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+<!-- Inline style NOOIT gebruiken -->
+<h1 style="color:red">Cursus CSS</h1>
+<h1>Cursus CSS</h1>
+<h1>Geschiedenis</h1>
+<h2>Cursus JavaScript</h2>
+<p>Dit is de cursus css</p>
 
+
+
+<h1 class="styleRed">Cursus HTML</h1>
+<h1 class="styleYellow">Cursus CSS</h1>
+<h1 class="styleYellow">C#</h1>
+
+<h2 id="menu">Maak uw keuze</h2>
+<!-- ID MAG SLECHTS 1X GEBRUIKT WORDEN-->
+<section>
+
+    <h1> NET </h1>
+
+</section>
 </body>
 </html>
