--- a/labo2/index.html
+++ b/labo2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>labo 3</title>
+    <title>labo 2</title>
 </head>
 <body>
 <header>
-    <h1>Labo é</h1>
+    <h1>Labo 2</h1>
 </header>
 <header>
     <section>
