--- a/labo6/index.html
+++ b/labo6/index.html
@@ -13,7 +13,7 @@
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="opdracht%201/index.html">Opdracht 1</a></li>
-    <li><a href="opdracht%203/index.html">Opdracht 3</a></li>
+    <li><a href="opdracht%203/resume.html">Opdracht 3</a></li>
     <li><a href="opdracht%204/index.html">Opdracht 4</a></li>
     <li><a href="opdracht%205/index.html">Opdracht 5</a></li>
     <li><a href="opdracht%206/index.html">Opdracht 6</a></li>
