--- a/labo7/opdracht 1/index.html
+++ b/labo7/opdracht 1/index.html
@@ -4,9 +4,10 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Nature Blog</title>
+		<link rel="stylesheet" href="styles/style.css">
 	</head>
 	<body>
-		<section>
+		<section >
 			<header>
 				<h1>Nature Blog</h1>
 			</header>
