--- a/labo7/opdracht 3/Personal homepage.html
+++ b/labo7/opdracht 3/Personal homepage.html
@@ -11,7 +11,7 @@
     <p>Hier kun je wat informatie over mij zien.</p>
     <ul>
         <li>Full name: Ben George Edwards</li>
-        <li>Address: Moenaardestraat 83, 8972 Pooperinge</li>
+        <li>Address: Moenaardestraat 83, 8972 Poperinge</li>
         <li>Phone number: 0456 34 23 53</li>
         <li>Email: ben.edwards@student.vives.be</li>
      </ul>
