--- a/labo7/index.html
+++ b/labo7/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>labo 6</title>
+  <title>labo 7</title>
 </head>
 <body>
 <header>
-  <h1>Labo 6</h1>
+  <h1>Labo 7</h1>
 </header>
 <section>
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="opdracht%201/index.html">Opdracht 1</a></li>
-    <li><a href="opdracht%203/resume.html">Opdracht 3</a></li>
+    <li><a href="opdracht%202/Personal%20homepage.html">Opdracht 2</a></li>
+    <li><a href="opdracht%203/Personal%20homepage.html">Opdracht 3</a></li>
     <li><a href="opdracht%204/index.html">Opdracht 4</a></li>
-    <li><a href="opdracht%205/index.html">Opdracht 5</a></li>
-    <li><a href="opdracht%206/index.html">Opdracht 6</a></li>
   </ul>
 </section>
 </body>
