--- a/labo8/demo1/float.html
+++ b/labo8/demo1/float.html
@@ -21,12 +21,14 @@
             height: 100px;
         }
         article#box4{
+            float: left;
             background-color: silver;
             width: 15%;
             height: 100px;
         }
         article#box5{
             background-color:red;
+            clear: both;
             width: 100%;
             height: 120px;
         }
