--- a/labo8/index.html
+++ b/labo8/index.html
@@ -17,6 +17,7 @@
     <li><a href="opdracht%201/voorbeeld4.html">Voorbeeld 4</a></li>
     <li><a href="Lorem%20ipsum/index.html">Lorem ipsum</a></li>
     <li><a href="Coctail-bar/loungestart.html">Cocktail bar</a></li>
+    <li><a href="CSS%20deel%204.docx">Verslag</a></li>
   </ul>
 </section>
 </body>
