--- a/labo9/index.html
+++ b/labo9/index.html
@@ -12,12 +12,7 @@
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="Airbus/airbus.html">Airbus</a></li>
-    <li><a href="opdracht%201/voorbeeld2.html">Voorbeeld 2</a></li>
-    <li><a href="opdracht%201/voorbeeld3.html">Voorbeeld 3</a></li>
-    <li><a href="opdracht%201/voorbeeld4.html">Voorbeeld 4</a></li>
-    <li><a href="Lorem%20ipsum/index.html">Lorem ipsum</a></li>
-    <li><a href="Coctail-bar/loungestart.html">Cocktail bar</a></li>
-    <li><a href="CSS%20deel%204.docx">Verslag</a></li>
+    <li><a href="Positioneren%20van%20images/index.html">Positioneren van images</a></li>
   </ul>
 </section>
 </body>
