--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="labo6/index.html">Labo 6</a></li>
         <li><a href="labo7/index.html">Labo 7</a></li>
         <li><a href="labo8/index.html">Labo 8</a></li>
-        <li><a href="labo9/Index.html">Labo 9</a></li>
+        <li><a href="labo9/index.html">Labo 9</a></li>
         <li><a href="labo10/index.html">Labo 10</a></li>
         <li><a href="labo11/index.html">Labo 11</a></li>
         <li><a href="labo12/index.html">Labo 12</a></li>
