--- a/labo10/index.html
+++ b/labo10/index.html
@@ -12,9 +12,9 @@
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="mediaQueries/oef1.html">media queries</a></li>
-    <li><a href="opdracht%20Piet%20Mondriaan/index.html"></a>Piet Mondriaan</li>
-    <li><a href="opdracht%201/index.htm"></a>Opdracht 1</li>
-    <li><a href="opdracht%202/index.htm"></a>Opdracht 2</li>
+    <li><a href="opdracht%20Piet%20Mondriaan/index.html">Piet Mondriaan</a></li>
+    <li><a href="opdracht%201/index.htm">Opdracht 1</a></li>
+    <li><a href="opdracht%202/index.htm">Opdracht 2</a></li>
   </ul>
 </section>
 </body>
