--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="labo10/index.html">Labo 10</a></li>
         <li><a href="labo11/index.html">Labo 11</a></li>
         <li><a href="labo12/index.html">Labo 12</a></li>
-        <li><a href="Kitchn/start.html">Kitchen</a></li>
+        <li><a href="Herhalingsoefeningen/Kitchn/start.html">Kitchen</a></li>
     </ul>
 </section>
 </body>
