--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
     <h2>Tweede Semester</h2>
     <ul>
-        <li><a href="JavaScript/Labo%201/demo%20rekenmachine/">Labo 2</a></li>
+        <li><a href="JavaScript/Labo%201/index.html">Labo 2</a></li>
     </ul>
 </section>
 </body>
