--- a/JavaScript/Labo 1/index.html
+++ b/JavaScript/Labo 1/index.html
@@ -11,6 +11,7 @@
 <section>
     <h2>Tweede Semester</h2>
     <ul>
+        <li><a href="Labo%201.pdf">Codecademy & leeg project</a></li>
         <li><a href="demo%20rekenmachine/demo%20rekenmasjien/index.html">demo rekenmachine</a></li>
     </ul>
 </section>
