--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Labo's web development 1 - 2024-25</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 <header>
@@ -26,7 +27,7 @@
     </ul>
     <h2>Tweede Semester</h2>
     <ul>
-        <li><a href="JavaScript/Labo%201/index.html">Labo 2</a></li>
+        <li><a href="JavaScript/Labo%201/index.html">Labo 1</a></li>
     </ul>
 </section>
 </body>
