--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Labo's web development 1 - 2024-25</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="HTML & CSS/labo2/styles/style.css">
 </head>
 <body>
 <header>
