--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <section>
     <h2>Eerste Semester</h2>
     <ul>
-        <li><a href="SEMESTER%201/labo2/index.html">Labo 2</a></li>
-        <li><a href="SEMESTER%201/labo3/index.html">Labo 3</a></li>
-        <li><a href="SEMESTER%201/labo4/index.html">Labo 4</a></li>
-        <li><a href="SEMESTER%201/labo5/index.html">Labo 5</a></li>
-        <li><a href="SEMESTER%201/labo6/index.html">Labo 6</a></li>
-        <li><a href="SEMESTER%201/labo7/index.html">Labo 7</a></li>
-        <li><a href="SEMESTER%201/labo8/index.html">Labo 8</a></li>
-        <li><a href="SEMESTER%201/labo9/index.html">Labo 9</a></li>
-        <li><a href="SEMESTER%201/labo10/index.html">Labo 10</a></li>
-        <li><a href="SEMESTER%201/labo11/index.html">Labo 11</a></li>
-        <li><a href="SEMESTER%201/labo12/index.html">Labo 12</a></li>
+        <li><a href="HTML%20&%20CSS/labo2/index.html">Labo 2</a></li>
+        <li><a href="HTML%20&%20CSS/labo3/index.html">Labo 3</a></li>
+        <li><a href="HTML%20&%20CSS/labo4/index.html">Labo 4</a></li>
+        <li><a href="HTML%20&%20CSS/labo5/index.html">Labo 5</a></li>
+        <li><a href="HTML%20&%20CSS/labo6/index.html">Labo 6</a></li>
+        <li><a href="HTML%20&%20CSS/labo7/index.html">Labo 7</a></li>
+        <li><a href="HTML%20&%20CSS/labo8/index.html">Labo 8</a></li>
+        <li><a href="HTML%20&%20CSS/labo9/index.html">Labo 9</a></li>
+        <li><a href="HTML%20&%20CSS/labo10/index.html">Labo 10</a></li>
+        <li><a href="HTML%20&%20CSS/labo11/index.html">Labo 11</a></li>
+        <li><a href="HTML%20&%20CSS/labo12/index.html">Labo 12</a></li>
         <li><a href="Herhalingsoefeningen/Kitchn/start.html">Kitchen</a></li>
     </ul>
     <h2>Tweede Semester</h2>
