--- a/SEMESTER1/labo11/index.html
+++ b/SEMESTER1/labo11/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>labo 10</title>
+  <title>labo 11</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 <header>
-  <h1>Labo 10</h1>
+  <h1>Labo 11</h1>
 </header>
 <section>
   <h2>Eerste Semester</h2>
