--- a/SEMESTER1/labo8/index.html
+++ b/SEMESTER1/labo8/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>labo 8</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="../../styles/style_labos.css">
 </head>
 <body>
 <header>
