--- a/SEMESTER2/Labo 2/index.html
+++ b/SEMESTER2/Labo 2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>labo 2</title>
+    <link rel="stylesheet" href="../../styles/style_labos.css">
 </head>
 <body>
 <header>
