--- a/SEMESTER2/Labo 2/index.html
+++ b/SEMESTER2/Labo 2/index.html
@@ -13,7 +13,15 @@
     <h2>Tweede Semester</h2>
     <ul>
         <li><a href="Labo%201.pdf">Codecademy & leeg project</a></li>
-        <li><a href="demo%20rekenmachine/demo%20rekenmasjien/index.html">demo rekenmachine</a></li>
+        <li><a href="Opdracht%20Arrays/index.html">Opdracht Arrays</a></li>
+        <li><a href="Opdracht%2001/index.html">Opdracht 01</a></li>
+        <li><a href="Opdracht%2003/index.html">Opdracht 03</a></li>
+        <li><a href="Opdracht%2004/index.html">Opdracht 04</a></li>
+        <li><a href="Opdracht%2005/index.html">Opdracht 05</a></li>
+        <li><a href="Opdracht%2006/index.html">Opdracht 06</a></li>
+        <li><a href="Opdracht%20substring/index.html">Opdracht 06</a></li>
+
+
     </ul>
 </section>
 </body>
