--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h2>Tweede Semester</h2>
     <ul>
         <li><a href="SEMESTER2/Labo%201/index.html">Labo 1</a></li>
+        <li><a href="SEMESTER2/Labo%202/index.html">Labo 2</a></li>
     </ul>
 </section>
 </body>
