--- a/SEMESTER2/Labo 2/index.html
+++ b/SEMESTER2/Labo 2/index.html
@@ -12,7 +12,7 @@
 <section>
     <h2>Tweede Semester</h2>
     <ul>
-        <li><a href="Labo%202.docx">Codecademy & leeg project</a></li>
+        <li><a href="Labo%202.docx">Codecademy</a></li>
         <li><a href="Opdracht%20Arrays/index.html">Opdracht Arrays</a></li>
         <li><a href="Opdracht%2001/index.html">Opdracht 01</a></li>
         <li><a href="Opdracht%2003/index.html">Opdracht 03</a></li>
