--- a/SEMESTER2/Labo 2/index.html
+++ b/SEMESTER2/Labo 2/index.html
@@ -18,11 +18,9 @@
         <li><a href="Opdracht%2003/index.html">Opdracht 03</a></li>
         <li><a href="Opdracht%2004/index.html">Opdracht 04</a></li>
         <li><a href="Opdracht%2005/index.html">Opdracht 05</a></li>
-        <li><a href="Opdracht%2006/index.html">Opdracht 06/Opdracht kopieermachine</a></li>
+        <li><a href="Opdracht%2006/index.html">Opdracht 06 / Kopieermachine</a></li>
         <li><a href="Opdracht%20substring/index.html">Opdracht substring</a></li>
         <li><a href="EXTRA%20UITDAGING/index.html">Uitdaging</a></li>
-
-
     </ul>
 </section>
 </body>
