--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <ul>
         <li><a href="SEMESTER2/Labo%201/index.html">Labo 1</a></li>
         <li><a href="SEMESTER2/Labo%202/index.html">Labo 2</a></li>
+        <li><a href="SEMESTER2/Labo%203/index.html">Labo 3 </a></li>
     </ul>
 </section>
 </body>
