--- a/SEMESTER2/Labo 4/index.html
+++ b/SEMESTER2/Labo 4/index.html
@@ -12,8 +12,9 @@
 <section>
     <h2>Tweede Semester</h2>
     <ul>
-        <li><a href="Opdracht%20invulformulier/index.html"></a></li>
-        <li><a href="Opdracht%20spaties%20op%20console/index.html"></a></li>
+        <li><a href="Verslag.docx">Verslag</a></li>
+        <li><a href="Opdracht%20invulformulier/index.html">Invulformulier</a></li>
+        <li><a href="Opdracht%20spaties%20op%20console/index.html">Spaties op console</a></li>
     </ul>
 </section>
 </body>
