--- a/SEMESTER2/Labo 4/index.html
+++ b/SEMESTER2/Labo 4/index.html
@@ -15,8 +15,8 @@
         <li><a href="Verslag.docx">Verslag</a></li>
         <li><a href="Opdracht%20invulformulier/index.html">Invulformulier</a></li>
         <li><a href="Opdracht%20spaties%20op%20console/index.html">Spaties op console</a></li>
-        <li><a href="Opdracht%20spaties%20met%20functie/index.html">Spaties met functie</a></li> 
-        <li><a href="Opdracht%20Man%20van%20An/index.html">De Man van An</a></li>
+        <li><a href="Opdracht%20spaties%20met%20functie/index.html">Spaties met functie</a></li>
+        <li><a href="Opdracht%20Man%20van%20An">De Man van An</a></li>
     </ul>
 </section>
 </body>
