--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="SEMESTER2/Labo%202/index.html">Labo 2</a></li>
         <li><a href="SEMESTER2/Labo%203/index.html">Labo 3</a></li>
         <li><a href="SEMESTER2/Labo%204/index.html">Labo 4</a></li>
+        <li><a href="SEMESTER2/Extra%20Oefening%20SB_h1-h5/index.html">Voorbereiding toets h1 t.e.m. h5</a></li>
     </ul>
 </section>
 </body>
