--- a/SEMESTER2/Extra Oefening SB_h1-h5/index.html
+++ b/SEMESTER2/Extra Oefening SB_h1-h5/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>To-Do List</title>
+    <title>Voorbereiding toets</title>
+    <link rel="stylesheet" href="../../styles/style_labos.css">
 </head>
 <body>
-
-<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
+<header>
+    <h1>Voorbereiding toets</h1>
+</header>
+<section>
+    <h2>Tweede Semester</h2>
+    <ul>
+        <li><a href="To-Do%20List/opgave.txt">Opgave To-Do List</a></li>
+        <li><a href="To-Do%20List/index.html">To-Do List</a></li>
+    </ul>
+</section>
 </body>
 </html>
