--- a/SEMESTER2/JavaScript Toetsvoorbereiding/Takenbeheer Systeem/index.html
+++ b/SEMESTER2/JavaScript Toetsvoorbereiding/Takenbeheer Systeem/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>To-Do List</title>
+    <title>Takenbeheer Systeem</title>
 </head>
 <body>
 
