--- a/SEMESTER2/Extra Oefeningen/index.html
+++ b/SEMESTER2/Extra Oefeningen/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Toetsvoorbereiding</title>
+    <title>Extra Oefeningen</title>
     <link rel="stylesheet" href="../../styles/style_labos.css">
 </head>
 <body>
 <header>
-    <h1>JavaScript Toetsvoorbereiding</h1>
+    <h1>Extra Oefeningen</h1>
 </header>
 <section>
     <h2>Tweede Semester</h2>
