--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </ul>
     <h2>Tweede Semester</h2>
     <ul>
+        <li><a href="SEMESTER2/Extra%20Oefeningen/index.html">Extra Oefeningen</a></li>
         <li><a href="SEMESTER2/Labo%201/index.html">Labo 1</a></li>
         <li><a href="SEMESTER2/Labo%202/index.html">Labo 2</a></li>
         <li><a href="SEMESTER2/Labo%203/index.html">Labo 3</a></li>
         <li><a href="SEMESTER2/Labo%204/index.html">Labo 4</a></li>
-        <li><a href="SEMESTER2/JavaScript%20Toetsvoorbereiding/index.html">JavaScript Toetsvoorbereiding</a></li>
     </ul>
 </section>
 </body>
