--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="SEMESTER2/Labo%202/index.html">Labo 2</a></li>
         <li><a href="SEMESTER2/Labo%203/index.html">Labo 3</a></li>
         <li><a href="SEMESTER2/Labo%204/index.html">Labo 4</a></li>
+        <li><a href="SEMESTER2/Labo%205/index.html">Labo 4</a></li>
     </ul>
 </section>
 </body>
