--- a/SEMESTER2/Labo 5/Opdracht De en Het/index.html
+++ b/SEMESTER2/Labo 5/Opdracht De en Het/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>De en Het</title>
 </head>
 <body>
+
+<label>Vul hier een zin in: <input type="text" id="invoer"></label>
+<input type="button" id="btnSend" value="Send">
+<p id="output"></p>
 
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
