--- a/SEMESTER2/Labo 5/Opdracht Formvalidatie 2/index.html
+++ b/SEMESTER2/Labo 5/Opdracht Formvalidatie 2/index.html
@@ -6,27 +6,39 @@
 </head>
 <body>
 <section>
-    <label for="txtFirstName">First Name: </label>
-    <input type="text" id="txtFirstName"/>
-    <span id="errorFirstName"></span>
+    <div>
+        <label for="txtFirstName">First Name: </label>
+        <input type="text" id="txtFirstName"/>
+        <span id="errorFirstName"></span>
+    </div>
 
-    <label for="txtLastName">Last Name: </label>
-    <input type="text" id="txtLastName" required/>
-    <span id="errorLastName"></span>
+    <div>
+        <label for="txtLastName">Last Name: </label>
+        <input type="text" id="txtLastName" required/>
+        <span id="errorLastName"></span>
+    </div>
 
-    <label for="dateBirth">Birth Date: </label>
-    <input type="date" id="dateBirth" required/>
-    <span id="errorBirthDate"></span>
+    <div>
+        <label for="dateBirth">Birth Date: </label>
+        <input type="date" id="dateBirth" required/>
+        <span id="errorBirthDate"></span>
+    </div>
 
-    <label for="txtEmail">Email: </label>
-    <input type="text" id="txtEmail" required/>
-    <span id="errorEmail"></span>
+    <div>
+        <label for="txtEmail">Email: </label>
+        <input type="text" id="txtEmail" required/>
+        <span id="errorEmail"></span>
+    </div>
 
-    <label for="numChildren">Number of Children: </label>
-    <input type="number" id="numChildren"/>
-    <span id="errorChildren"></span>
+    <div>
+        <label for="numChildren">Number of Children: </label>
+        <input type="number" id="numChildren"/>
+        <span id="errorChildren"></span>
+    </div>
 
-    <input type="button" id="btnSubmit" value="Submit"/>
+    <div>
+        <input type="button" id="btnSubmit" value="Submit"/>
+    </div>
 </section>
 
 <script type="text/javascript" src="scripts/code.js"></script>
