--- a/SEMESTER2/Labo 5/Opdracht Formvalidatie 1/index.html
+++ b/SEMESTER2/Labo 5/Opdracht Formvalidatie 1/index.html
@@ -5,34 +5,41 @@
     <title>Form Validation</title>
 </head>
 <body>
-<section>
-    <label for="chkIsSmoker">Smoker</label>
-    <input type="checkbox" id="chkSmoker"/>
+<form>
+    <div>
+        <label for="chkIsSmoker">Smoker</label>
+        <input type="checkbox" id="chkSmoker"/>
+    </div>
 
-    <label>Native Language</label>
-    <input type="radio" id="rbtMoedertaalNL" name="rbtMoedertaal" value="nl"/><label>Nederlands</label>
-    <input type="radio" id="rbtMoedertaalFR" name="rbtMoedertaal" value="fr"/><label>Frans</label>
-    <input type="radio" id="rbtMoedertaalEN" name="rbtMoedertaal" value="en"/><label>Engels</label>
+    <div>
+        <label>Native Language</label>
+        <input type="radio" id="rbtMoedertaalNL" name="rbtMoedertaal" value="nl"/><label>Nederlands</label>
+        <input type="radio" id="rbtMoedertaalFR" name="rbtMoedertaal" value="fr"/><label>Frans</label>
+        <input type="radio" id="rbtMoedertaalEN" name="rbtMoedertaal" value="en"/><label>Engels</label>
+    </div>
 
-    <label>Favoriete buurlanden</label>
-    <select id="selFavorieteBuurlanden">
-        <option>Nederland</option>
-        <option selected>Frankrijk</option>
-        <option>Duitsland</option>
-    </select>
+    <div>
+        <label>Favoriete buurlanden</label>
+        <select id="selFavorieteBuurlanden">
+            <option>Nederland</option>
+            <option selected>Frankrijk</option>
+            <option>Duitsland</option>
+        </select>
+    </div>
 
-    <label>Order</label>
-    <select id="selOrder" multiple size="6">
-        <option>aardappelen</option>
-        <option>brood</option>
-        <option>melk</option>
-        <option>biefstuk</option>
-        <option>chips</option>
-        <option>krant</option>
-    </select>
-
+    <div>
+        <label>Order</label>
+        <select id="selOrder" multiple size="6">
+            <option>aardappelen</option>
+            <option>brood</option>
+            <option>melk</option>
+            <option>biefstuk</option>
+            <option>chips</option>
+            <option>krant</option>
+        </select>
+    </div>
     <input type="button" id="btnToon" value="Resultaat"/>
-</section>
+</form>
 
 <script type="text/javascript" src="scripts/code.js"></script>
 </body>
