--- a/SEMESTER2/Labo 5/index.html
+++ b/SEMESTER2/Labo 5/index.html
@@ -15,7 +15,8 @@
         <li><a href="Opdracht%20De%20en%20Het">De en Het</a></li>
         <li><a href="Opdracht%20Formvalidatie%201">Formvalidatie 1</a></li>
         <li><a href="Opdracht%20Formvalidatie%202">Formvalidatie 2</a></li>
-        <li><a href="Opdracht%20Trigrams">Trigrams</a></li>
+        <li><a href="Opdracht%20Trigrams/index.html">Trigrams</a></li>
+        <li><a href="Opdracht%20Gemeentes/index.html">Gemeentes</a></li>
     </ul>
 </section>
 </body>
