--- a/SEMESTER2/Labo 6/Opdracht color picker (uitbreiding)/index.html
+++ b/SEMESTER2/Labo 6/Opdracht color picker (uitbreiding)/index.html
@@ -23,10 +23,11 @@
             <span>Blue</span>
             <span id="lblBlue">0</span>
         </div>
-
     </div>
     <div class="swatch" id="swatch"></div>
+    <button id="btnSave">Save</button>
 </div>
-c
+<p id="copySwatch"></p>
+<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
