--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="SEMESTER2/Labo%203/index.html">Labo 3</a></li>
         <li><a href="SEMESTER2/Labo%204/index.html">Labo 4</a></li>
         <li><a href="SEMESTER2/Labo%205/index.html">Labo 5</a></li>
+        <li><a href="SEMESTER2/Labo%206/index.html">Labo 6</a></li>
     </ul>
 </section>
 </body>
