--- a/SEMESTER2/Labo 4/Opdracht invulformulier/index.html
+++ b/SEMESTER2/Labo 4/Opdracht invulformulier/index.html
@@ -14,7 +14,7 @@
         <p>Last name*: <input type="text" id="lastName" name="lastName" placeholder="Your last name" required></p>
 </fieldset>
 
-<fieldset>
+<fieldset><input type="">
     <legend>Sports</legend>
         <p><input type="checkbox" id="running" name="running"> Running</p>
         <p><input type="checkbox" id="swimming" name="swimming"> Swimming</p>
