--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <li><a href="SEMESTER2/Labo%204/index.html">Labo 4</a></li>
         <li><a href="SEMESTER2/Labo%205/index.html">Labo 5</a></li>
         <li><a href="SEMESTER2/Labo%206/index.html">Labo 6</a></li>
+        <li><a href="SEMESTER2/Labo%207/index.html">Labo 7</a></li>
+        <li><a href="SEMESTER2/Labo%208/index.html">Labo 8</a></li>
+        <li><a href="SEMESTER2/Labo%209/index.html">Labo 9</a></li>
+        <li><a href="SEMESTER2/Labo%2010/index.html">Labo 10</a></li>
+        <li><a href="SEMESTER2/Labo%2011/index.html">Labo 11</a></li>
     </ul>
 </section>
 </body>
